--- a/src/index.scss
+++ b/src/index.scss
@@ -126,7 +126,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  // overflow-y: scroll;
 }
 
 .container {
@@ -186,16 +185,13 @@ input:disabled::placeholder {
 textarea {
   resize: none;
   font-size: 16px;
-  // line-height: 16px;
   background-color: var(--color-1);
   border: 1px solid var(--color-5);
   border-radius: 5px;
   padding: 5px 8px 5px;
-
   height: 32px;
   text-decoration: none;
   color: var(--color-5);
-  // max-height: 100px;
 }
 
 // =======================    HEADER
@@ -212,7 +208,6 @@ main {
   padding: 8px;
   display: flex;
   flex-direction: column-reverse;
-  // flex-direction: column;
   gap: 8px;
   overflow-y: scroll;
   overflow: scroll;
@@ -235,29 +230,6 @@ main {
   opacity: 0.5;
 }
 
-// .wrap {
-//   position: relative;
-// }
-
-// .date {
-//   text-align: center;
-//   color: var(--color-4);
-//   font-style: italic;
-//   position: sticky;
-//   // position: -webkit-sticky;
-//   top: 0;
-//   background-color: var(--color-4);
-//   font-size: 14px;
-//   color: var(--color-1);
-//   width: fit-content;
-//   margin: 0 auto;
-//   padding: 2px 10px;
-//   border-radius: 10px;
-//   margin-bottom: 8px;
-//   z-index: 1;
-//   opacity: 0.5;
-// }
-
 .message {
   display: flex;
 }
@@ -272,13 +244,9 @@ main {
 
 .user .content {
   background-color: var(--color-2);
-  // padding: 6px 8px;
 }
 .other .content {
   background-color: var(--color-3);
-  // padding: 6px 8px;
-
-  // padding: 6px 8px 8px;
 }
 
 .content {
@@ -290,12 +258,9 @@ main {
   opacity: 0.7;
   font-size: 13px;
   line-height: 17px;
-  // gap: 10px;
-  // margin-bottom: 4px;
 }
 
 .message__content {
-  // margin-bottom: 4px;
   line-height: 19px;
   word-break: normal;
   overflow-wrap: break-word;
@@ -382,6 +347,15 @@ footer {
   margin-right: 8px;
 }
 
+.btn-send {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  & svg {
+    fill: var(--color-5);
+  }
+}
+
 // =======================    Modal window
 
 .popup {
@@ -422,19 +396,13 @@ footer {
   cursor: pointer;
   color: var(--color-4);
 }
-// .close-svg {
-//   fill: var(--color-4);
-//   opacity: 0.7;
-// }
 
 .popup-content {
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  // justify-content: center;
 }
 .popup-content.login-code {
-  // justify-content: center;
   margin-top: 25px;
 }
 .popup-content.login-code form {
@@ -448,7 +416,6 @@ footer {
   display: flex;
   justify-content: space-between;
   gap: 8px;
-  // flex-direction: column;
 }
 
 .content-input {
@@ -480,7 +447,6 @@ footer {
 
 // =======================    SWITCHER
 .theme-switcher {
-  // position: absolute;
   right: 0;
   top: 1px;
   height: 30px;
@@ -499,7 +465,6 @@ footer {
   top: 0;
   left: 0;
   display: block;
-  // text-indent: -9999px;
   height: 30px;
   width: 60px;
   background-color: rgb(210, 210, 210);
