--- a/src/index.scss
+++ b/src/index.scss
@@ -183,13 +183,11 @@ input:disabled::placeholder {
 }
 
 textarea {
-  resize: none;
   font-size: 16px;
   background-color: var(--color-1);
   border: 1px solid var(--color-5);
   border-radius: 5px;
   padding: 5px 8px 5px;
-  height: 32px;
   text-decoration: none;
   color: var(--color-5);
 }
@@ -345,6 +343,11 @@ footer {
 .textarea-message {
   flex: 1 1 auto;
   margin-right: 8px;
+  resize: none;
+  height: auto;
+  min-height: 32px;
+  max-height: 100px;
+  transition: height 0.2s;
 }
 
 .btn-send {
